--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "testing-controllers",
   "version": "1.0.0",
   "devDependencies": {
+    "connect-modrewrite": "^0.9.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
