--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "karma-spec-reporter": "0.0.23"
   },
   "dependencies": {
-    "express": "^4.13.4",
-    "angular": "^1.5.8"
+    "angular": "^1.5.8",
+    "angular-sanitize": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
+    "express": "^4.13.4"
   }
 }
