--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "karma-spec-reporter": "0.0.23"
   },
   "dependencies": {
+    "angular-ui-router": "^0.2.18",
     "express": "^4.13.4"
   }
 }
